# github-stats-updater

./: .env.example  .gitignore  Cargo.toml  README.md  github-stats-updater.service  github-stats-updater.timer  setup.sh
provisioning/dashboards/: dashboard.yaml
provisioning/datasources/: sqlite.yaml
src/: main.rs
