[package]
name = "github-stats-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
octocrab = "0.38"
tempfile = "3"
git2 = { version = "0.18", default-features = false, features = ["https"] }
walkdir = "2"
regex = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
