[package]
name = "github-stats-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
octocrab = "0.38"
tempfile = "3"
git2 = { version = "0.18", default-features = false, features = ["https"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
dotenv = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokei = "12"
